--- a/study/php-laravel-001/index.html
+++ b/study/php-laravel-001/index.html
@@ -334,6 +334,18 @@
             <li><a href="/tags/php/">php</a></li>
             <li><a href="/tags/laravel/">laravel</a></li>
         </ul>
+<nav class="paginav">
+  <a class="prev" href="/study/php-laravel-002/">
+    <span class="title">« 上一页</span>
+    <br>
+    <span>php-laravel升级注意事项</span>
+  </a>
+  <a class="next" href="/study/php-encrypter/">
+    <span class="title">下一页 »</span>
+    <br>
+    <span>Php-自定义封装加密方法</span>
+  </a>
+</nav>
 
     </footer>
 </article>
