--- a/study/python-selenium/index.html
+++ b/study/python-selenium/index.html
@@ -241,6 +241,18 @@ driver.execute_script(&#34;arguments[0].click();&#34;, nextButton) 据说.click(
             <li><a href="/tags/python/">python</a></li>
             <li><a href="/tags/selenium/">selenium</a></li>
         </ul>
+<nav class="paginav">
+  <a class="prev" href="/study/python-tensorflow-001/">
+    <span class="title">« 上一页</span>
+    <br>
+    <span>Python-初学tensorflow第一天-搭建环境</span>
+  </a>
+  <a class="next" href="/study/python-001/">
+    <span class="title">下一页 »</span>
+    <br>
+    <span>初始Python-文件操作</span>
+  </a>
+</nav>
 
     </footer>
 </article>
