--- a/study/python-tensorflow-001/index.html
+++ b/study/python-tensorflow-001/index.html
@@ -248,6 +248,18 @@ A:  <code>pip uninstall protobuf</code>和<code>pip install protobuf==3.19.0</co
             <li><a href="/tags/python/">python</a></li>
             <li><a href="/tags/tensorflow/">tensorflow</a></li>
         </ul>
+<nav class="paginav">
+  <a class="prev" href="/study/python-tensorflow-002/">
+    <span class="title">« 上一页</span>
+    <br>
+    <span>Python-初学tensorflow第二天-学习例子</span>
+  </a>
+  <a class="next" href="/study/python-selenium/">
+    <span class="title">下一页 »</span>
+    <br>
+    <span>初始Python-自动化操作</span>
+  </a>
+</nav>
 
     </footer>
 </article>
