--- a/study/php-encrypter/index.html
+++ b/study/php-encrypter/index.html
@@ -253,6 +253,18 @@ class Encrypter
             <li><a href="/tags/php/">php</a></li>
             <li><a href="/tags/encrypter/">encrypter</a></li>
         </ul>
+<nav class="paginav">
+  <a class="prev" href="/study/php-laravel-001/">
+    <span class="title">« 上一页</span>
+    <br>
+    <span>php-总结laravel使用技巧-001</span>
+  </a>
+  <a class="next" href="/study/php-distance/">
+    <span class="title">下一页 »</span>
+    <br>
+    <span>Php-根据经纬度计算直线距离</span>
+  </a>
+</nav>
 
     </footer>
 </article>
