--- a/study/php-laravel-002/index.html
+++ b/study/php-laravel-002/index.html
@@ -241,6 +241,18 @@ $1[&#39;$2&#39;]
             <li><a href="/tags/php/">php</a></li>
             <li><a href="/tags/laravel/">laravel</a></li>
         </ul>
+<nav class="paginav">
+  <a class="prev" href="/study/wechaty-001/">
+    <span class="title">« 上一页</span>
+    <br>
+    <span>wechaty-初识wechaty用途</span>
+  </a>
+  <a class="next" href="/study/php-laravel-001/">
+    <span class="title">下一页 »</span>
+    <br>
+    <span>php-总结laravel使用技巧-001</span>
+  </a>
+</nav>
 
     </footer>
 </article>
