--- a/study/php-ssl/index.html
+++ b/study/php-ssl/index.html
@@ -244,6 +244,18 @@
             <li><a href="/tags/php/">php</a></li>
             <li><a href="/tags/ssl/">ssl</a></li>
         </ul>
+<nav class="paginav">
+  <a class="prev" href="/study/php-distance/">
+    <span class="title">« 上一页</span>
+    <br>
+    <span>Php-根据经纬度计算直线距离</span>
+  </a>
+  <a class="next" href="/study/python-tensorflow-002/">
+    <span class="title">下一页 »</span>
+    <br>
+    <span>Python-初学tensorflow第二天-学习例子</span>
+  </a>
+</nav>
 
     </footer>
 </article>
