--- a/study/python-tensorflow-002/index.html
+++ b/study/python-tensorflow-002/index.html
@@ -329,6 +329,18 @@ import tensorflow as tf import pandas as pd data=pd.read_csv(&#39;./demo1.csv&#3
             <li><a href="/tags/python/">python</a></li>
             <li><a href="/tags/tensorflow/">tensorflow</a></li>
         </ul>
+<nav class="paginav">
+  <a class="prev" href="/study/php-ssl/">
+    <span class="title">« 上一页</span>
+    <br>
+    <span>Php-生成ssl证书所需的csr信息</span>
+  </a>
+  <a class="next" href="/study/python-tensorflow-001/">
+    <span class="title">下一页 »</span>
+    <br>
+    <span>Python-初学tensorflow第一天-搭建环境</span>
+  </a>
+</nav>
 
     </footer>
 </article>
