--- a/study/go-gin-002/index.html
+++ b/study/go-gin-002/index.html
@@ -318,6 +318,11 @@ package common import ( &#34;fmt&#34; &#34;note.hello-api.cn/model&#34; &#34;gor
             <li><a href="http://www.hello-api.cn/tags/gin/">gin</a></li>
         </ul>
 <nav class="paginav">
+  <a class="prev" href="http://www.hello-api.cn/study/go-gin-middleware/">
+    <span class="title">« 上一页</span>
+    <br>
+    <span>go-Gin中间件</span>
+  </a>
   <a class="next" href="http://www.hello-api.cn/study/go-mysql/">
     <span class="title">下一页 »</span>
     <br>
