--- a/life/python-tronlink-scan/index.html
+++ b/life/python-tronlink-scan/index.html
@@ -273,6 +273,18 @@ fbd03d69af7ba8e1f7c56dd11738c8d6269497193daf0efa23eff3ed477e6f12,40969058,TJDFLr
             <li><a href="http://www.hello-api.cn/tags/python/">python</a></li>
             <li><a href="http://www.hello-api.cn/tags/tronlink/">tronlink</a></li>
         </ul>
+<nav class="paginav">
+  <a class="prev" href="http://www.hello-api.cn/life/wechat-rent/">
+    <span class="title">« 上一页</span>
+    <br>
+    <span>微信小程序-云收租</span>
+  </a>
+  <a class="next" href="http://www.hello-api.cn/life/php-domain-auction/">
+    <span class="title">下一页 »</span>
+    <br>
+    <span>php-域名竞价模块</span>
+  </a>
+</nav>
 
     </footer>
 </article>
