--- a/study/go-001/index.html
+++ b/study/go-001/index.html
@@ -261,10 +261,10 @@ splice1: len:1,[]int fmt.Printf 一般可支持的输出流为:
     <br>
     <span>go-了解数组和切片的基础用法</span>
   </a>
-  <a class="next" href="http://www.hello-api.cn/study/dapp/">
+  <a class="next" href="http://www.hello-api.cn/tech/tronlink-002/">
     <span class="title">下一页 »</span>
     <br>
-    <span>dapp</span>
+    <span>tronlink-归集系统</span>
   </a>
 </nav>
 
