--- a/study/mongodb-001/index.html
+++ b/study/mongodb-001/index.html
@@ -383,6 +383,11 @@ mongostats</p>
     <br>
     <span>Mongodb数据库-复制集</span>
   </a>
+  <a class="next" href="http://www.hello-api.cn/tech/hugo-002/">
+    <span class="title">下一页 »</span>
+    <br>
+    <span>从0到1 记录搭建Hugo个人博客-02 选用模板</span>
+  </a>
 </nav>
 
     </footer>
