--- a/study/mongodb-004/index.html
+++ b/study/mongodb-004/index.html
@@ -261,10 +261,10 @@ pymongo语法:</p>
     <br>
     <span>keycloak</span>
   </a>
-  <a class="next" href="http://www.hello-api.cn/study/powerdns/">
+  <a class="next" href="http://www.hello-api.cn/tech/hugo-004/">
     <span class="title">下一页 »</span>
     <br>
-    <span>powerdns-学习如何搭建个人专属DNS服务器</span>
+    <span>从0到1 记录搭建Hugo个人博客-04 增加评论功能</span>
   </a>
 </nav>
 
