--- a/study/php-laravel-001/index.html
+++ b/study/php-laravel-001/index.html
@@ -340,10 +340,10 @@
     <br>
     <span>php-laravel升级注意事项</span>
   </a>
-  <a class="next" href="http://www.hello-api.cn/study/php-encrypter/">
+  <a class="next" href="http://www.hello-api.cn/tech/php-ocr/">
     <span class="title">下一页 »</span>
     <br>
-    <span>Php-自定义封装加密方法</span>
+    <span>php-分享自有系统接入OCR图片识别</span>
   </a>
 </nav>
 
