--- a/study/python-001/index.html
+++ b/study/python-001/index.html
@@ -236,10 +236,10 @@ wb = xlrd.open_workbook(filepath) sh = wb.sheet_by_name(&#39;数据明细&#39;) 
     <br>
     <span>初始Python-自动化操作</span>
   </a>
-  <a class="next" href="http://www.hello-api.cn/study/apache/">
+  <a class="next" href="http://www.hello-api.cn/tech/https/">
     <span class="title">下一页 »</span>
     <br>
-    <span>Apache</span>
+    <span>Https双向认证</span>
   </a>
 </nav>
 
