--- a/study/python-selenium/index.html
+++ b/study/python-selenium/index.html
@@ -242,10 +242,10 @@ driver.execute_script(&#34;arguments[0].click();&#34;, nextButton) 据说.click(
             <li><a href="http://www.hello-api.cn/tags/selenium/">selenium</a></li>
         </ul>
 <nav class="paginav">
-  <a class="prev" href="http://www.hello-api.cn/study/python-tensorflow-001/">
+  <a class="prev" href="http://www.hello-api.cn/tech/python-thread/">
     <span class="title">« 上一页</span>
     <br>
-    <span>Python-初学tensorflow第一天-搭建环境</span>
+    <span>Python-多线程</span>
   </a>
   <a class="next" href="http://www.hello-api.cn/study/python-001/">
     <span class="title">下一页 »</span>
