--- a/study/python-tensorflow-001/index.html
+++ b/study/python-tensorflow-001/index.html
@@ -254,10 +254,10 @@ A:  <code>pip uninstall protobuf</code>和<code>pip install protobuf==3.19.0</co
     <br>
     <span>Python-初学tensorflow第二天-学习例子</span>
   </a>
-  <a class="next" href="http://www.hello-api.cn/study/python-selenium/">
+  <a class="next" href="http://www.hello-api.cn/tech/python-thread/">
     <span class="title">下一页 »</span>
     <br>
-    <span>初始Python-自动化操作</span>
+    <span>Python-多线程</span>
   </a>
 </nav>
 
