--- a/study/wechaty-001/index.html
+++ b/study/wechaty-001/index.html
@@ -251,10 +251,10 @@ AI情话
     <br>
     <span>wechaty-描述各方法的类型</span>
   </a>
-  <a class="next" href="http://www.hello-api.cn/study/php-laravel-002/">
+  <a class="next" href="http://www.hello-api.cn/life/seo/">
     <span class="title">下一页 »</span>
     <br>
-    <span>php-laravel升级注意事项</span>
+    <span>seo</span>
   </a>
 </nav>
 
