--- a/life/php-domain-auction/index.html
+++ b/life/php-domain-auction/index.html
@@ -285,6 +285,18 @@ Gname的API接口文档
             <li><a href="http://www.hello-api.cn/tags/php/">php</a></li>
             <li><a href="http://www.hello-api.cn/tags/domain/">domain</a></li>
         </ul>
+<nav class="paginav">
+  <a class="prev" href="http://www.hello-api.cn/life/python-tronlink-scan/">
+    <span class="title">« 上一页</span>
+    <br>
+    <span>python-波场区块链的扫块系统</span>
+  </a>
+  <a class="next" href="http://www.hello-api.cn/tech/hugo-003/">
+    <span class="title">下一页 »</span>
+    <br>
+    <span>从0到1 记录搭建Hugo个人博客-03 使用Algolia搜索</span>
+  </a>
+</nav>
 
     </footer>
 </article>
