--- a/life/smsgateway/index.html
+++ b/life/smsgateway/index.html
@@ -393,6 +393,13 @@
             <li><a href="http://www.hello-api.cn/tags/sms/">sms</a></li>
             <li><a href="http://www.hello-api.cn/tags/gateway/">gateway</a></li>
         </ul>
+<nav class="paginav">
+  <a class="next" href="http://www.hello-api.cn/study/go-skill/">
+    <span class="title">下一页 »</span>
+    <br>
+    <span>go-平常使用中的一些小技巧</span>
+  </a>
+</nav>
 
     </footer>
 </article>
