--- a/study/dapp/index.html
+++ b/study/dapp/index.html
@@ -440,10 +440,10 @@ trongrid.io
             <li><a href="http://www.hello-api.cn/tags/dapp/">dapp</a></li>
         </ul>
 <nav class="paginav">
-  <a class="prev" href="http://www.hello-api.cn/study/go-001/">
+  <a class="prev" href="http://www.hello-api.cn/tech/tronlink-002/">
     <span class="title">« 上一页</span>
     <br>
-    <span>go-了解Printf输出的用法</span>
+    <span>tronlink-归集系统</span>
   </a>
   <a class="next" href="http://www.hello-api.cn/study/php-powerdns/">
     <span class="title">下一页 »</span>
