--- a/study/go-skill/index.html
+++ b/study/go-skill/index.html
@@ -215,6 +215,11 @@ data := make([]uint, 10) rand.Seed(time.Now().Unix()) length := len(data) for i 
             <li><a href="http://www.hello-api.cn/tags/go/">go</a></li>
         </ul>
 <nav class="paginav">
+  <a class="prev" href="http://www.hello-api.cn/life/smsgateway/">
+    <span class="title">« 上一页</span>
+    <br>
+    <span>SmsGateway-短信网关平台</span>
+  </a>
   <a class="next" href="http://www.hello-api.cn/study/go-gin-middleware/">
     <span class="title">下一页 »</span>
     <br>
