--- a/study/php-distance/index.html
+++ b/study/php-distance/index.html
@@ -232,15 +232,15 @@
             <li><a href="http://www.hello-api.cn/tags/php/">php</a></li>
         </ul>
 <nav class="paginav">
-  <a class="prev" href="http://www.hello-api.cn/study/php-encrypter/">
+  <a class="prev" href="http://www.hello-api.cn/tech/baota/">
     <span class="title">« 上一页</span>
     <br>
-    <span>Php-自定义封装加密方法</span>
+    <span>从0到1 用宝塔集成虚拟主机提供商</span>
   </a>
-  <a class="next" href="http://www.hello-api.cn/study/php-ssl/">
+  <a class="next" href="http://www.hello-api.cn/tech/php-punycode/">
     <span class="title">下一页 »</span>
     <br>
-    <span>Php-生成ssl证书所需的csr信息</span>
+    <span>Php-编码解码punycode</span>
   </a>
 </nav>
 
