--- a/study/php-encrypter/index.html
+++ b/study/php-encrypter/index.html
@@ -254,15 +254,15 @@ class Encrypter
             <li><a href="http://www.hello-api.cn/tags/encrypter/">encrypter</a></li>
         </ul>
 <nav class="paginav">
-  <a class="prev" href="http://www.hello-api.cn/study/php-laravel-001/">
+  <a class="prev" href="http://www.hello-api.cn/tech/php-ocr/">
     <span class="title">« 上一页</span>
     <br>
-    <span>php-总结laravel使用技巧-001</span>
+    <span>php-分享自有系统接入OCR图片识别</span>
   </a>
-  <a class="next" href="http://www.hello-api.cn/study/php-distance/">
+  <a class="next" href="http://www.hello-api.cn/tech/php-imap/">
     <span class="title">下一页 »</span>
     <br>
-    <span>Php-根据经纬度计算直线距离</span>
+    <span>Php邮件收取imap</span>
   </a>
 </nav>
 
