--- a/study/php-laravel-002/index.html
+++ b/study/php-laravel-002/index.html
@@ -242,10 +242,10 @@ $1[&#39;$2&#39;]
             <li><a href="http://www.hello-api.cn/tags/laravel/">laravel</a></li>
         </ul>
 <nav class="paginav">
-  <a class="prev" href="http://www.hello-api.cn/study/wechaty-001/">
+  <a class="prev" href="http://www.hello-api.cn/tech/hugo-003/">
     <span class="title">« 上一页</span>
     <br>
-    <span>wechaty-初识wechaty用途</span>
+    <span>从0到1 记录搭建Hugo个人博客-03 使用Algolia搜索</span>
   </a>
   <a class="next" href="http://www.hello-api.cn/study/php-laravel-001/">
     <span class="title">下一页 »</span>
