--- a/study/php-ssl/index.html
+++ b/study/php-ssl/index.html
@@ -245,15 +245,15 @@
             <li><a href="http://www.hello-api.cn/tags/ssl/">ssl</a></li>
         </ul>
 <nav class="paginav">
-  <a class="prev" href="http://www.hello-api.cn/study/php-distance/">
+  <a class="prev" href="http://www.hello-api.cn/tech/php-punycode/">
     <span class="title">« 上一页</span>
     <br>
-    <span>Php-根据经纬度计算直线距离</span>
+    <span>Php-编码解码punycode</span>
   </a>
-  <a class="next" href="http://www.hello-api.cn/study/python-tensorflow-002/">
+  <a class="next" href="http://www.hello-api.cn/tech/php-swagger/">
     <span class="title">下一页 »</span>
     <br>
-    <span>Python-初学tensorflow第二天-学习例子</span>
+    <span>Php-Swagger代码了解</span>
   </a>
 </nav>
 
