--- a/study/powerdns/index.html
+++ b/study/powerdns/index.html
@@ -298,15 +298,15 @@ chmod 777 inc/config.inc.php<br>
             <li><a href="http://www.hello-api.cn/tags/powerdns/">powerdns</a></li>
         </ul>
 <nav class="paginav">
-  <a class="prev" href="http://www.hello-api.cn/study/mongodb-004/">
+  <a class="prev" href="http://www.hello-api.cn/tech/hugo-004/">
     <span class="title">« 上一页</span>
     <br>
-    <span>Mongodb数据库-python有关的操作</span>
+    <span>从0到1 记录搭建Hugo个人博客-04 增加评论功能</span>
   </a>
-  <a class="next" href="http://www.hello-api.cn/study/wechaty-002/">
+  <a class="next" href="http://www.hello-api.cn/tech/gitblit/">
     <span class="title">下一页 »</span>
     <br>
-    <span>wechaty-描述各方法的类型</span>
+    <span>Gitblit-如何实现自动编译发布</span>
   </a>
 </nav>
 
