--- a/study/python-tensorflow-002/index.html
+++ b/study/python-tensorflow-002/index.html
@@ -330,10 +330,10 @@ import tensorflow as tf import pandas as pd data=pd.read_csv(&#39;./demo1.csv&#3
             <li><a href="http://www.hello-api.cn/tags/tensorflow/">tensorflow</a></li>
         </ul>
 <nav class="paginav">
-  <a class="prev" href="http://www.hello-api.cn/study/php-ssl/">
+  <a class="prev" href="http://www.hello-api.cn/tech/php-pay/">
     <span class="title">« 上一页</span>
     <br>
-    <span>Php-生成ssl证书所需的csr信息</span>
+    <span>Php支付接口</span>
   </a>
   <a class="next" href="http://www.hello-api.cn/study/python-tensorflow-001/">
     <span class="title">下一页 »</span>
