--- a/study/wechaty-002/index.html
+++ b/study/wechaty-002/index.html
@@ -311,10 +311,10 @@ from wechaty import (FileBox) file_box = FileBox."/>
             <li><a href="http://www.hello-api.cn/tags/wechaty/">wechaty</a></li>
         </ul>
 <nav class="paginav">
-  <a class="prev" href="http://www.hello-api.cn/study/powerdns/">
+  <a class="prev" href="http://www.hello-api.cn/tech/tronlink-001/">
     <span class="title">« 上一页</span>
     <br>
-    <span>powerdns-学习如何搭建个人专属DNS服务器</span>
+    <span>tronlink-扫块系统</span>
   </a>
   <a class="next" href="http://www.hello-api.cn/study/wechaty-001/">
     <span class="title">下一页 »</span>
