--- a/tech/php-ocr/index.html
+++ b/tech/php-ocr/index.html
@@ -400,6 +400,18 @@ public function getToken() { $filename = &#34;/data/baidu_access_token.{$this-&g
             <li><a href="http://www.hello-api.cn/tags/php/">php</a></li>
             <li><a href="http://www.hello-api.cn/tags/ocr/">ocr</a></li>
         </ul>
+<nav class="paginav">
+  <a class="prev" href="http://www.hello-api.cn/study/php-laravel-001/">
+    <span class="title">« 上一页</span>
+    <br>
+    <span>php-总结laravel使用技巧-001</span>
+  </a>
+  <a class="next" href="http://www.hello-api.cn/study/php-encrypter/">
+    <span class="title">下一页 »</span>
+    <br>
+    <span>Php-自定义封装加密方法</span>
+  </a>
+</nav>
 
     </footer>
 </article>
