--- a/tech/php-pay/index.html
+++ b/tech/php-pay/index.html
@@ -841,6 +841,18 @@ interface PaymentClientInterface { /** * 支付请求 * @param $order_out_no * @
             <li><a href="http://www.hello-api.cn/tags/php/">php</a></li>
             <li><a href="http://www.hello-api.cn/tags/pay/">pay</a></li>
         </ul>
+<nav class="paginav">
+  <a class="prev" href="http://www.hello-api.cn/tech/php-swagger/">
+    <span class="title">« 上一页</span>
+    <br>
+    <span>Php-Swagger代码了解</span>
+  </a>
+  <a class="next" href="http://www.hello-api.cn/study/python-tensorflow-002/">
+    <span class="title">下一页 »</span>
+    <br>
+    <span>Python-初学tensorflow第二天-学习例子</span>
+  </a>
+</nav>
 
     </footer>
 </article>
