--- a/tech/php-swagger/index.html
+++ b/tech/php-swagger/index.html
@@ -398,6 +398,18 @@ schema=&ldquo;Pagination&rdquo;,<br>
             <li><a href="http://www.hello-api.cn/tags/php/">php</a></li>
             <li><a href="http://www.hello-api.cn/tags/swagger/">swagger</a></li>
         </ul>
+<nav class="paginav">
+  <a class="prev" href="http://www.hello-api.cn/study/php-ssl/">
+    <span class="title">« 上一页</span>
+    <br>
+    <span>Php-生成ssl证书所需的csr信息</span>
+  </a>
+  <a class="next" href="http://www.hello-api.cn/tech/php-pay/">
+    <span class="title">下一页 »</span>
+    <br>
+    <span>Php支付接口</span>
+  </a>
+</nav>
 
     </footer>
 </article>
