--- a/tech/python-thread/index.html
+++ b/tech/python-thread/index.html
@@ -435,6 +435,18 @@
             <li><a href="http://www.hello-api.cn/tags/python/">python</a></li>
             <li><a href="http://www.hello-api.cn/tags/thread/">thread</a></li>
         </ul>
+<nav class="paginav">
+  <a class="prev" href="http://www.hello-api.cn/study/python-tensorflow-001/">
+    <span class="title">« 上一页</span>
+    <br>
+    <span>Python-初学tensorflow第一天-搭建环境</span>
+  </a>
+  <a class="next" href="http://www.hello-api.cn/study/python-selenium/">
+    <span class="title">下一页 »</span>
+    <br>
+    <span>初始Python-自动化操作</span>
+  </a>
+</nav>
 
     </footer>
 </article>
