--- a/life/smsgateway/index.html
+++ b/life/smsgateway/index.html
@@ -394,6 +394,11 @@
             <li><a href="http://www.hello-api.cn/tags/gateway/">gateway</a></li>
         </ul>
 <nav class="paginav">
+  <a class="prev" href="http://www.hello-api.cn/study/go-selection-sort/">
+    <span class="title">« 上一页</span>
+    <br>
+    <span>Go-选择排序算法</span>
+  </a>
   <a class="next" href="http://www.hello-api.cn/study/go-skill/">
     <span class="title">下一页 »</span>
     <br>
